--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
           <h3>Links</h3>
           <p>
             <a class="pill" style="display:inline-block;margin:6px 8px 0 0;" href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
-            <a class="pill" style="display:inline-block;margin:6px 8px 0 0;" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
-            <a class="pill" style="display:inline-block;margin:6px 8px 0 0;" href="#contact">Email</a>
+            <a class="pill" style="display:inline-block;margin:6px 8px 0 0;" href="https://www.linkedin.com/in/boracyln" target="_blank" rel="noreferrer">LinkedIn</a>            <a class="pill" style="display:inline-block;margin:6px 8px 0 0;" href="#contact">Email</a>
           </p>
           <p style="margin-top:10px;color:var(--muted);font-size:13px;">
             (Linkleri kendi profillerinle değiştir.)
@@ -395,38 +394,70 @@
     </section>
 
     <!-- EXPERIENCE -->
-    <section id="experience">
-      <div class="section-title">
-        <h2>Experience</h2>
-        <span>Edit with real roles + dates</span>
-      </div>
+<section id="experience">
+  <div class="section-title">
+    <h2>Experience</h2>
+    <span>Research & leadership</span>
+  </div>
 
-      <div class="card">
-        <ul class="list">
-          <li class="item">
-            <div>
-              <strong>Research / Internship — Bioinformatics & Data</strong>
-              <small>Short line about what you did, impact, tools.</small>
-            </div>
-            <small>202X</small>
-          </li>
-          <li class="item">
-            <div>
-              <strong>University Projects — ML & Engineering</strong>
-              <small>Systems thinking, documentation, reproducible workflows.</small>
-            </div>
-            <small>202X–202X</small>
-          </li>
-          <li class="item">
-            <div>
-              <strong>Leadership — Student Society</strong>
-              <small>Organization, communication, project coordination.</small>
-            </div>
-            <small>202X</small>
-          </li>
-        </ul>
-      </div>
-    </section>
+  <div class="card">
+    <ul class="list">
+      <li class="item">
+        <div>
+          <strong>Novo Nordisk Foundation Center for Basic Metabolic Research (CBMR) — Research Intern</strong>
+          <small>
+            Erasmus+ research traineeship. Worked on large-scale GWAS datasets, data harmonization, LD clumping,
+            and computational analyses for adipose-related and cardiometabolic traits.
+          </small>
+        </div>
+        <small>07/2025 – 09/2025 • Copenhagen</small>
+      </li>
+
+      <li class="item">
+        <div>
+          <strong>TÜBİTAK — 2209-A Project Leader</strong>
+          <small>
+            Overviewed miRNA expression in LUAD and highlighted clinically relevant signals.
+            Used statistical analyses, machine learning, and feature-selection to identify potential biomarker miRNAs.
+          </small>
+        </div>
+        <small>04/2025 – Present</small>
+      </li>
+
+      <li class="item">
+        <div>
+          <strong>TÜBİTAK — Undergraduate Research Fellow</strong>
+          <small>
+            Analyzed xylanase genes from thermophilic Geobacillus strains with BV-BRC and MicroScope.
+            Refined gene annotations, examined conserved motifs, and performed cross-genome comparisons to identify enzyme candidates.
+          </small>
+        </div>
+        <small>02/2024 – 06/2025</small>
+      </li>
+
+      <li class="item">
+        <div>
+          <strong>TarLab Biotechnology — Research Intern</strong>
+          <small>
+            Studied nanoparticle effects on plant stress responses and fertilizer potential.
+            Measured stress via biochemical markers (e.g., proline secretion, antioxidant enzyme activities) and used ImageJ for leaf area analysis.
+          </small>
+        </div>
+        <small>08/2023 – 09/2023 • Istanbul</small>
+      </li>
+
+      <li class="item">
+        <div>
+          <strong>Marmara University Bioengineering Society (BIYOM) — Secretary-general</strong>
+          <small>
+            Interviewed prospective members, coordinated speaker outreach, and supported sponsorship discussions with companies.
+          </small>
+        </div>
+        <small>05/2022 – 06/2023 • Istanbul</small>
+      </li>
+    </ul>
+  </div>
+</section>
 
     <!-- CONTACT -->
     <section id="contact">
@@ -442,10 +473,10 @@
             If you want to collaborate, talk about internships, or ask about a project, send a message.
           </p>
           <div class="cta">
-            <a class="btn primary" href="mailto:your.email@example.com">
-              <span class="icon">✉️</span> your.email@example.com
+            <a class="btn primary" href="mailto:boracyln3@gmail.com">
+              <span class="icon">✉️</span> boracyln3@gmail.com
             </a>
-            <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">
+            <a class="btn" href="https://www.linkedin.com/in/boracyln" target="_blank" rel="noreferrer">
               <span class="icon">🔗</span> LinkedIn
             </a>
             <a class="btn" href="https://github.com/" target="_blank" rel="noreferrer">
