--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <span class="icon">✉️</span> Contact
           </a>
           <!-- İstersen buraya CV linki koy -->
-          <a class="btn" href="#" onclick="alert('CV linkini buraya koyacağız (Google Drive / PDF / LinkedIn).'); return false;">
+          <a class="btn" href="Bora-CEYLAN-CV.pdf" download>
             <span class="icon">📄</span> Resume
           </a>
         </div>
