--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <div class="card mini">
           <h3>Links</h3>
           <p>
-            <a class="pill" style="display:inline-block;margin:6px 8px 0 0;" href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
+            <a class="pill" style="display:inline-block;margin:6px 8px 0 0;" href="https://github.com/borcey" target="_blank" rel="noreferrer">GitHub</a>
             <a class="pill" style="display:inline-block;margin:6px 8px 0 0;" href="https://www.linkedin.com/in/boracyln" target="_blank" rel="noreferrer">LinkedIn</a>            <a class="pill" style="display:inline-block;margin:6px 8px 0 0;" href="#contact">Email</a>
           </p>
           <p style="margin-top:10px;color:var(--muted);font-size:13px;">
